# OpenGLTest

./: CMakeLists.txt  README.md
include/glad/: glad.c  glad.h
libs/glad/: glad.h
src/: glad.c  main.cpp
